css/media.css
@media only screen and (min-width: 724px) {
  /* --------------- Header, Footer & Body --------------- */
  header {
    display: none;
  }

  body {
    font-size: 1.37rem;
  }
  main {
    margin-bottom: 20px;
  }
  .breadcrumbs a,
  .breadcrumbs i,
  .breadcrumbs p {
    margin-top: 20px;
  }
  footer {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    min-width: 100%;
    background-image: linear-gradient(#0a3641, #00151b);
  }

  footer ul {
    display: block;
  }

  footer h4,
  footer h5 {
    margin-left: 10px;
    text-transform: uppercase;
    margin-top: 10px;
    margin-bottom: 10px;
    font-weight: 400;
    font-size: 1.5rem;
    text-decoration: underline;
  }

  .footer-info a {
    color: var(--white);
    text-decoration: none;
  }

  .footer-info li {
    list-style-type: none;
    padding: 0px 15px;
  }

  .contact {
    text-align: left;
  }

  .contact i {
    padding-right: 15px;
  }

  .about-footer {
    text-align: center;
  }

  .social-media {
    margin-right: 10px;
    text-align: right;
    text-decoration: none;
    color: var(--white);
  }

  .social-media-icons {
    display: inline-flex;
    justify-content: flex-end;
    min-width: 100%;
  }

  .social-media-icons li {
    padding: 0px 15px;
  }

  /* --------------- Navbars mobile & desktop --------------- */
  .navbar-mobile-bottom {
    display: none;
  }
  /*.navbar-desktop {
    display: flex;
  }*/
  header {
    display: flex;
    justify-content: space-between;
  }
  .navigation-menu-links {
    display: flex;
    color: var(--white);
    text-transform: uppercase;
    font-size: 1.5rem;
  }
  .navigation-menu-links a {
    text-decoration: none;
    padding: 5px;
  }
  .logo {
    margin-left: 20px;
    width: 120px;
  }

  /* --------------- Home page --------------- */
  .content {
    display: flex;
    flex-direction: row;
  }

  .main,
  .about {
    width: 100%;
  }

  .women,
  .men {
    width: 50%;
    background-position: center;
  }

  .textwomen,
  .textmen {
    top: 25%;
    max-width: 50%;
    text-align: center;
  }

  /* --------------- Women's jackets --------------- */

  .items-wrapper {
    display: grid;
    grid-template-columns: 1fr 1fr;
  }

  /* --------------- Alaska --------------- */

  .product-wrapper {
    display: flex;
    margin-left: 20px;
  }
  .product-wrapper-info {
    margin-left: 50px;
    text-align: left;
  }
  .product-wrapper-info .colours h2 {
    margin-top: 0px;
    text-align: left;
  }
  .colour-wrapper {
    justify-content: start;
  }
  .product-wrapper-info .sizes h2 {
    text-align: left;
  }
  .cta-container,
  .add-wishlist {
    text-align: left;
    margin-top: 10px;
  }
}

@media only screen and (min-width: 950px) {
  /* --------------- Home page --------------- */
  .content h1,
  .content h2,
  .content p {
    width: 100%;
    margin-left: 40%;
    text-align: left;
    padding-left: 10px;
  }

  .text,
  .textabout {
    max-width: 40%;
    left: 40%;
  }

  .textabout {
    top: 15%;
  }
}

@media only screen and (min-width: 1280px) {
  .items-wrapper {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
  }
}

